Preview and Markdown boxes no longer overlap
There still exists problem within overflow of text. Will take a look at it and decide if it should be a subissue or not.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -8394,7 +8394,7 @@ only screen and (max-device-width: 568px) {
   border: solid var(--color-border-4);
   background-color: var(--color-background-4);
   flex-grow:1;
-  max-width: 50%;
+  max-width: 55%;
   /*
   width: 38%;
   height: 80%;
@@ -8410,6 +8410,7 @@ only screen and (max-device-width: 568px) {
   */
   height: 100%;
   width: 100%;
+  padding-bottom: 15px;
   box-sizing: border-box;
 }
 
@@ -8506,7 +8507,7 @@ legend {
 
 .prevSpan {
   max-width: 100%;
-  padding: 10px;
+  padding: 10px 0px 0px;
   /*height: 85%;*/
   height: 100%;
   box-sizing: border-box;
@@ -9029,7 +9030,7 @@ div > div > .shortcut-keys:hover {
  * --------------================################================-------------- */
 .markdown-icons {
   cursor: pointer;
-  width: 20%;
+  width: 100%;
   height: 24px;
   text-align: center;
   line-height: 24px;
